infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-argocd-insecure@kubernetescrd
spec:
  rules:
  - host: argocd.omni.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  argocd-server
            port:
              number: 80
  tls:
  - secretName: argocd-certificates-greyroom-net-production # <=== Use the name defined in Certificate resource.
